Desktop/websocket-chat/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  ports:
    - name: http
      protocol: TCP
      port: 80        
      targetPort: 3000  
    - name: app-port
      protocol: TCP
      port: 3000       
      targetPort: 3000      
  type: ClusterIP
